--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">RecipesKode</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_internet">No internet</string>
+    <string name="refresh_when_internet">Try refreshing the screen when communication is restored.</string>
+    <string name="api_error">Something went wrong</string>
+    <string name="refresh_later_api_error">The problem is on our side, we are already looking into it. Please try refreshing the screen later.</string>
+    <string name="search">search</string>
+    <string name="settings">settings</string>
 </resources>
