--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="refresh_later_api_error">The problem is on our side, we are already looking into it. Please try refreshing the screen later.</string>
     <string name="search">search</string>
     <string name="settings">settings</string>
+    <string name="sort_by_name">Sort by Name</string>
+    <string name="sort_by_date">Sort by Date</string>
+    <string name="hearth">hearth</string>
+    <string name="share">share</string>
 </resources>
