--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="sort_by_date">Sort by Date</string>
     <string name="hearth">hearth</string>
     <string name="share">share</string>
+    <string name="recommended">Recommended:</string>
+    <string name="instruction">Instruction:</string>
+    <string name="difficulty">Difficulty:</string>
+    <string name="refresh">refresh</string>
 </resources>
